# rp2040-nix-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  blink.cc  shell.nix
